shirotsume_tools/parser/ShirotsumeParser.py
# Generated from ./Shirotsume.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ShirotsumeParser ( Parser ):

    grammarFileName = "Shirotsume.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#base_path'", "'class'", "'{'", "'}'", 
                     "'method'", "'page'", "'Operate'", "'('", "')'", "';'", 
                     "','", "'wait'", "'call'", "'far_call'", "'shift'", 
                     "'if'", "'else'", "'while'", "'select'", "'case'", 
                     "':'", "'return'", "'scene_return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "NUMBER", "BOOL", "LITERAL", "STRING", 
                      "TEXT", "COLOR", "OPERATOR", "ASSIGNMENT_OPERATOR", 
                      "RIGHT_OPERATOR", "COMMENT", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_macro_declaration = 2
    RULE_class_declaration = 3
    RULE_method_declaration = 4
    RULE_method_body = 5
    RULE_page_declaration = 6
    RULE_page_body = 7
    RULE_statement = 8
    RULE_operate_statement = 9
    RULE_function_call = 10
    RULE_function_arguments = 11
    RULE_wait_statement = 12
    RULE_call_statement = 13
    RULE_far_call_statement = 14
    RULE_shift_statement = 15
    RULE_control_statement = 16
    RULE_if_statement = 17
    RULE_while_statement = 18
    RULE_select_statement = 19
    RULE_case_statement = 20
    RULE_return_statement = 21
    RULE_move_vector_item = 22
    RULE_move_vector = 23
    RULE_expression = 24
    RULE_operate = 25

    ruleNames =  [ "program", "declaration", "macro_declaration", "class_declaration", 
                   "method_declaration", "method_body", "page_declaration", 
                   "page_body", "statement", "operate_statement", "function_call", 
                   "function_arguments", "wait_statement", "call_statement", 
                   "far_call_statement", "shift_statement", "control_statement", 
                   "if_statement", "while_statement", "select_statement", 
                   "case_statement", "return_statement", "move_vector_item", 
                   "move_vector", "expression", "operate" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    IDENTIFIER=24
    NUMBER=25
    BOOL=26
    LITERAL=27
    STRING=28
    TEXT=29
    COLOR=30
    OPERATOR=31
    ASSIGNMENT_OPERATOR=32
    RIGHT_OPERATOR=33
    COMMENT=34
    LINE_COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def macro_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShirotsumeParser.Macro_declarationContext)
            else:
                return self.getTypedRuleContext(ShirotsumeParser.Macro_declarationContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShirotsumeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ShirotsumeParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ShirotsumeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 52
                self.macro_declaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.declaration()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==6):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration(self):
            return self.getTypedRuleContext(ShirotsumeParser.Class_declarationContext,0)


        def page_declaration(self):
            return self.getTypedRuleContext(ShirotsumeParser.Page_declarationContext,0)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = ShirotsumeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.class_declaration()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.page_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Macro_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ShirotsumeParser.STRING, 0)

        def getRuleIndex(self):
            return ShirotsumeParser.RULE_macro_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacro_declaration" ):
                listener.enterMacro_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacro_declaration" ):
                listener.exitMacro_declaration(self)




    def macro_declaration(self):

        localctx = ShirotsumeParser.Macro_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_macro_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(ShirotsumeParser.T__0)
            self.state = 68
            self.match(ShirotsumeParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(ShirotsumeParser.LITERAL, 0)

        def TEXT(self):
            return self.getToken(ShirotsumeParser.TEXT, 0)

        def method_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShirotsumeParser.Method_declarationContext)
            else:
                return self.getTypedRuleContext(ShirotsumeParser.Method_declarationContext,i)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)




    def class_declaration(self):

        localctx = ShirotsumeParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ShirotsumeParser.T__1)
            self.state = 71
            _la = self._input.LA(1)
            if not(_la==27 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 72
            self.match(ShirotsumeParser.T__2)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 73
                self.method_declaration()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(ShirotsumeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_body(self):
            return self.getTypedRuleContext(ShirotsumeParser.Method_bodyContext,0)


        def LITERAL(self):
            return self.getToken(ShirotsumeParser.LITERAL, 0)

        def TEXT(self):
            return self.getToken(ShirotsumeParser.TEXT, 0)

        def getRuleIndex(self):
            return ShirotsumeParser.RULE_method_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declaration" ):
                listener.enterMethod_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declaration" ):
                listener.exitMethod_declaration(self)




    def method_declaration(self):

        localctx = ShirotsumeParser.Method_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_method_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(ShirotsumeParser.T__4)
            self.state = 82
            _la = self._input.LA(1)
            if not(_la==27 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 83
            self.match(ShirotsumeParser.T__2)
            self.state = 84
            self.method_body()
            self.state = 85
            self.match(ShirotsumeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShirotsumeParser.StatementContext)
            else:
                return self.getTypedRuleContext(ShirotsumeParser.StatementContext,i)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_method_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_body" ):
                listener.enterMethod_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_body" ):
                listener.exitMethod_body(self)




    def method_body(self):

        localctx = ShirotsumeParser.Method_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_method_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 147714176) != 0):
                self.state = 87
                self.statement()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Page_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def page_body(self):
            return self.getTypedRuleContext(ShirotsumeParser.Page_bodyContext,0)


        def LITERAL(self):
            return self.getToken(ShirotsumeParser.LITERAL, 0)

        def TEXT(self):
            return self.getToken(ShirotsumeParser.TEXT, 0)

        def getRuleIndex(self):
            return ShirotsumeParser.RULE_page_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPage_declaration" ):
                listener.enterPage_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPage_declaration" ):
                listener.exitPage_declaration(self)




    def page_declaration(self):

        localctx = ShirotsumeParser.Page_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_page_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ShirotsumeParser.T__5)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==27 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self.match(ShirotsumeParser.T__2)
            self.state = 96
            self.page_body()
            self.state = 97
            self.match(ShirotsumeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Page_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShirotsumeParser.StatementContext)
            else:
                return self.getTypedRuleContext(ShirotsumeParser.StatementContext,i)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_page_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPage_body" ):
                listener.enterPage_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPage_body" ):
                listener.exitPage_body(self)




    def page_body(self):

        localctx = ShirotsumeParser.Page_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_page_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 147714176) != 0):
                self.state = 99
                self.statement()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operate_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.Operate_statementContext,0)


        def function_call(self):
            return self.getTypedRuleContext(ShirotsumeParser.Function_callContext,0)


        def wait_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.Wait_statementContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.Call_statementContext,0)


        def far_call_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.Far_call_statementContext,0)


        def shift_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.Shift_statementContext,0)


        def control_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.Control_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.Return_statementContext,0)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ShirotsumeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.operate_statement()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.function_call()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.wait_statement()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.call_statement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.far_call_statement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.shift_statement()
                pass
            elif token in [16, 18, 19]:
                self.enterOuterAlt(localctx, 7)
                self.state = 111
                self.control_statement()
                pass
            elif token in [22, 23]:
                self.enterOuterAlt(localctx, 8)
                self.state = 112
                self.return_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Operate_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operate(self):
            return self.getTypedRuleContext(ShirotsumeParser.OperateContext,0)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_operate_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperate_statement" ):
                listener.enterOperate_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperate_statement" ):
                listener.exitOperate_statement(self)




    def operate_statement(self):

        localctx = ShirotsumeParser.Operate_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operate_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(ShirotsumeParser.T__6)
            self.state = 116
            self.match(ShirotsumeParser.T__7)
            self.state = 117
            self.operate()
            self.state = 118
            self.match(ShirotsumeParser.T__8)
            self.state = 119
            self.match(ShirotsumeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(ShirotsumeParser.LITERAL, 0)

        def function_arguments(self):
            return self.getTypedRuleContext(ShirotsumeParser.Function_argumentsContext,0)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)




    def function_call(self):

        localctx = ShirotsumeParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ShirotsumeParser.LITERAL)
            self.state = 122
            self.match(ShirotsumeParser.T__7)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1593835784) != 0):
                self.state = 123
                self.function_arguments()


            self.state = 126
            self.match(ShirotsumeParser.T__8)
            self.state = 127
            self.match(ShirotsumeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_argumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShirotsumeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShirotsumeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return ShirotsumeParser.RULE_function_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_arguments" ):
                listener.enterFunction_arguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_arguments" ):
                listener.exitFunction_arguments(self)




    def function_arguments(self):

        localctx = ShirotsumeParser.Function_argumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.expression(0)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 130
                self.match(ShirotsumeParser.T__10)
                self.state = 131
                self.expression(0)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Wait_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ShirotsumeParser.NUMBER, 0)

        def getRuleIndex(self):
            return ShirotsumeParser.RULE_wait_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWait_statement" ):
                listener.enterWait_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWait_statement" ):
                listener.exitWait_statement(self)




    def wait_statement(self):

        localctx = ShirotsumeParser.Wait_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_wait_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(ShirotsumeParser.T__11)
            self.state = 138
            self.match(ShirotsumeParser.NUMBER)
            self.state = 139
            self.match(ShirotsumeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Call_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(ShirotsumeParser.LITERAL, 0)

        def STRING(self):
            return self.getToken(ShirotsumeParser.STRING, 0)

        def TEXT(self):
            return self.getToken(ShirotsumeParser.TEXT, 0)

        def getRuleIndex(self):
            return ShirotsumeParser.RULE_call_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall_statement" ):
                listener.enterCall_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall_statement" ):
                listener.exitCall_statement(self)




    def call_statement(self):

        localctx = ShirotsumeParser.Call_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_call_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(ShirotsumeParser.T__12)
            self.state = 142
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 939524096) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 143
            self.match(ShirotsumeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Far_call_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(ShirotsumeParser.LITERAL)
            else:
                return self.getToken(ShirotsumeParser.LITERAL, i)

        def STRING(self):
            return self.getToken(ShirotsumeParser.STRING, 0)

        def TEXT(self):
            return self.getToken(ShirotsumeParser.TEXT, 0)

        def getRuleIndex(self):
            return ShirotsumeParser.RULE_far_call_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFar_call_statement" ):
                listener.enterFar_call_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFar_call_statement" ):
                listener.exitFar_call_statement(self)




    def far_call_statement(self):

        localctx = ShirotsumeParser.Far_call_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_far_call_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(ShirotsumeParser.T__13)
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 939524096) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 147
            self.match(ShirotsumeParser.T__10)
            self.state = 148
            self.match(ShirotsumeParser.LITERAL)
            self.state = 149
            self.match(ShirotsumeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Shift_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(ShirotsumeParser.TEXT, 0)

        def getRuleIndex(self):
            return ShirotsumeParser.RULE_shift_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShift_statement" ):
                listener.enterShift_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShift_statement" ):
                listener.exitShift_statement(self)




    def shift_statement(self):

        localctx = ShirotsumeParser.Shift_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_shift_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(ShirotsumeParser.T__14)
            self.state = 152
            self.match(ShirotsumeParser.TEXT)
            self.state = 153
            self.match(ShirotsumeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Control_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(ShirotsumeParser.While_statementContext,0)

